# cpp_example_project

./: .clang-tidy  .gitignore  .gitlab-ci.yml  AGENTS.md  CMakeLists.txt  CMakePresets.json  README.md  conanfile.py
.github/workflows/: build_cmake.yml
cmake/: BuildingConfig.cmake  Cache.cmake  CodeFormat.cmake  CompilerWarnings.cmake  Conan.cmake  Doxygen.cmake  GitInformation.cmake  InterproceduralOptimization.cmake  Options.cmake  PrecompiledHeader.cmake  PreventInSourceBuilds.cmake  ProjectSettings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  Utilities.cmake
cmake/presets/: base.json  linux-clang.json  linux-gcc.json  special.json  windows.json
docker/: Dockerfile
fuzz_test/: CMakeLists.txt
scripts/: customize-project.py
src/: CMakeLists.txt
src/boost.beast/: CMakeLists.txt
src/crow/: CMakeLists.txt
src/embedded/: CMakeLists.txt
src/imgui/: CMakeLists.txt  main.cpp
src/open62541/: CMakeLists.txt
src/open62541pp/: CMakeLists.txt
src/protobuf.cppzmq/: CMakeLists.txt
src/qt/: Backend.h  CMakeLists.txt  main.cpp
src/qt/ui/: main.qml
src/slint/: CMakeLists.txt
src/slint/src/: main.cpp
src/sml/: CMakeLists.txt
test/: CMakeLists.txt
test/catch2/: CMakeLists.txt
test/gtest/: CMakeLists.txt
